benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-mix021.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix021.opt.yml/mix021.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix021.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_3s7ofy9d/tmp/tmp90ij979y.c
Compilation started
/tmp/BenchExec_run_3s7ofy9d/tmp/tmp90ij979y.c: In function ‘P2’:
/tmp/BenchExec_run_3s7ofy9d/tmp/tmp90ij979y.c:609:19: error: ‘FALSE’ undeclared (first use in this function)
  609 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_3s7ofy9d/tmp/tmp90ij979y.c:609:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_3s7ofy9d/tmp/tmp90ij979y.c: In function ‘P3’:
/tmp/BenchExec_run_3s7ofy9d/tmp/tmp90ij979y.c:650:19: error: ‘FALSE’ undeclared (first use in this function)
  650 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_3s7ofy9d/tmp/tmp90ij979y.c:651:19: error: ‘TRUE’ undeclared (first use in this function)
  651 |   weak$$choice2 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
